# tribal-engine

./: .gitignore  Cargo.toml  NEBULA_IMPLEMENTATION.md  README.md  compile_shaders.bat  compile_shaders.sh  fix_ui.rs  run.sh  run_fixed.bat  test_resize.bat
.github/workflows/: ci.yml
config/: default.json  materials.json  scene.json
content/: ships.blend  ships.blend1
content/math_models/: boat-movement-range.html
content/models/: Fed_cruiser_ship.mtl
docs/: 64BIT_COORDINATE_SYSTEM.md  ARCHITECTURE_ECS.md  BUILD_SUCCESS.md  ECS_NEBULA_STAR_IMPLEMENTATION.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  NEBULA_INTEGRATION_GUIDE.md  STATUS.md  UBO_ALIGNMENT_GUIDE.md
docs/gameplay/: ASYNC_MULTIPLAYER.md  EVENT_SOURCING.md  REPLAY_SYSTEM.md  SNAPSHOTS.md  TURN_BASED_MOVEMENT_SYSTEM.md
shaders/: gizmo.frag  gizmo.vert  hologram.frag  hologram.vert  imgui.frag  imgui.vert  line.frag  line.vert  mesh.frag  mesh.vert  nebula.frag  other_star.frag  other_star.vert  outline.frag  outline.vert  skybox.frag  skybox.vert  skybox_simple.frag  skybox_starry.frag  ssao.frag  ssao.vert  ssao_blur.frag  ssao_blur.vert  star.frag  star.vert  unlit.frag  unlit.vert  widget.frag  widget.vert  wireframe.frag  wireframe.vert
src/: background.rs  config.rs  engine.rs  game.rs  game_manager.rs  gizmo.rs  imgui_renderer.rs  lighting.rs  main.rs  material.rs  material_library.rs  mesh.rs  nebula.rs  renderer.rs  scene.rs
src/core/: camera.rs  lighting.rs  mod.rs  render_pass.rs  renderer.rs  resource_manager.rs  (+2 more)
tests/: coordinate_test.rs  projection_consistency_test.rs
(+22 files in other folders)
