[package]
name = "tribal-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.29"
raw-window-handle = "0.6"
glam = { version = "0.28", features = ["bytemuck"] }
tobj = "4.0"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
imgui = "0.12"
imgui-winit-support = "0.12"

[profile.dev]
opt-level = 2
