[package]
name = "tribal-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.29"
raw-window-handle = "0.6"
glam = { version = "0.28", features = ["bytemuck", "serde"] }
tobj = "4.0"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
imgui = "0.12"
imgui-winit-support = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ECS and Physics for large-scale space battles
hecs = "0.10"
rapier3d = { version = "0.22", features = ["serde-serialize", "enhanced-determinism"] }
nalgebra = "0.33"  # Rapier uses nalgebra for math

[profile.dev]
opt-level = 2
